// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResultDetail /> should render 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
}

.c2 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  border-color: transparent;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  color: #757575;
}

.c4 a:link {
  color: #757575;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c2 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <h2>
            Montant indicatif de votre indemnité
          </h2>
          <h3
            style="font-size: 2rem;"
          >
            500 €
          </h3>
          <p>
            <em>
              Sur la base du calcul de l'indemnité minimum légale de licenciement.
            </em>
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <table
          class="c4"
          style="font-size: 1.2em;"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Moyenne des 12 derniers mois
              </td>
              <td
                style="text-align: center;"
              >
                1500 €
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Moyenne des 3 derniers mois
              </td>
              <td
                style="text-align: center;"
              >
                2000 €
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Salaire de référence
              </td>
              <td
                style="text-align: center;"
              >
                -
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Base minimum : fin de contrat &gt; au
                 
                <a
                  href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000019225838&cidTexte=LEGITEXT000006072050"
                >
                  27/09/2017
                </a>
              </td>
              <td
                style="text-align: center;"
              >
                1 / 4
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Ancienneté
              </td>
              <td
                style="text-align: center;"
              >
                &gt; 10 ans
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ResultDetail /> should render when rupture contrat is before sept 27 sept 2017 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
}

.c2 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  border-color: transparent;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  color: #757575;
}

.c4 a:link {
  color: #757575;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c2 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <h2>
            Montant indicatif de votre indemnité
          </h2>
          <h3
            style="font-size: 2rem;"
          >
            500 €
          </h3>
          <p>
            <em>
              Sur la base du calcul de l'indemnité minimum légale de licenciement.
            </em>
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <table
          class="c4"
          style="font-size: 1.2em;"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Moyenne des 12 derniers mois
              </td>
              <td
                style="text-align: center;"
              >
                1500 €
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Moyenne des 3 derniers mois
              </td>
              <td
                style="text-align: center;"
              >
                2000 €
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Salaire de référence
              </td>
              <td
                style="text-align: center;"
              >
                -
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Base minimum : fin de contrat &lt;= au
                 
                <a
                  href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000019225838&cidTexte=LEGITEXT000006072050&categorieLien=id&dateTexte=20170926"
                >
                  27/09/2017
                </a>
              </td>
              <td
                style="text-align: center;"
              >
                1 / 5
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Ancienneté
              </td>
              <td
                style="text-align: center;"
              >
                &gt; 10 ans
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ResultDetail /> should render with temps partiel 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
}

.c2 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  border-color: transparent;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  color: #757575;
}

.c4 a:link {
  color: #757575;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c2 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <h2>
            Montant indicatif de votre indemnité
          </h2>
          <h3
            style="font-size: 2rem;"
          >
            500 €
          </h3>
          <p>
            <em>
              Sur la base du calcul de l'indemnité minimum légale de licenciement.
            </em>
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <table
          class="c4"
          style="font-size: 1.2em;"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Salaire de référence
              </td>
              <td
                style="text-align: center;"
              >
                -
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Base minimum : fin de contrat &gt; au
                 
                <a
                  href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000019225838&cidTexte=LEGITEXT000006072050"
                >
                  27/09/2017
                </a>
              </td>
              <td
                style="text-align: center;"
              >
                1 / 4
              </td>
            </tr>
            <tr>
              <td
                style="text-align: left; font-weight: bold;"
              >
                Ancienneté
              </td>
              <td
                style="text-align: center;"
              >
                &gt; 10 ans
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
